--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,7 +79,7 @@
     <!-- Newsletter
     ================================================== -->
     <div class="newsletter text-center">
-        <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
+        <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, 告诉你车评人的故事</span>
 
     </div>
     {% endif %}
@@ -95,7 +95,7 @@
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/"> © ConsoleStudio ㊀㊁㊂㊃㊄㊅㊆㊇㊈㊉</a>
+                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/"> © ConsoleStudio </a>㊀㊁㊂㊃㊄㊅㊆㊇㊈㊉
             </div>
         </div>
     </div>
