--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,8 @@ post_class: post-template
 
 <div class="entry-header">
     <!-- Post Title -->
-    <h1 class="posttitle">{{ page.title }}</h1>
+    <h1 class="posttitle">    <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}"></a>
+{{ page.title }}</h1>
     <!-- Author & Date  Box -->
     {% assign author = site.authors[page.author] %}
     {% if page.author %}
