--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,16 +56,13 @@
     <!-- Site Logo/Name
     ================================================== -->
    
-    <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
-    </a>  
-   
 
     <!-- Site Tag
     ================================================== -->
     {% if page.url == '/' %}
         <p class="sitetag">
-            {{ site.description }}
+          <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}"></a>
+	  {{ site.description }}
         </p>
     {% endif %}
 
