--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -3,6 +3,10 @@ title: "Categories"
 layout: default
 permalink: "/categories.html"
 ---
+<p class="sitetag">
+<a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}"></a>
+	  {{ site.description }}
+</p>
 
 
 {% for category in site.categories %}
