--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	<!-- defer loading of font and font awesome -->
 	<noscript id="deferred-styles">
 		<link href="https://fonts.googleapis.com/css?family=Sen:400,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+        <!--link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"-->
 	</noscript>
 
 <!-- Begin Sidebar Navigation
@@ -36,10 +36,12 @@
 <div id="blackover-nav" class="blackover"></div>
 <nav id="menu">
     <ul>
-        <h3>Navigation</h3>
-        <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/about">About <span class="badge badge-primary">Me</span></a></li>
-        <li><a href="{{ site.baseurl }}/contact">Contact</a></li>       
+        <h3>目录</h3>
+        <li><a href="{{ site.baseurl }}/">首页</a></li>
+	<li><a href="{{ site.baseurl }}/categories">分类</a></li>
+	<li><a href="{{ site.baseurl }}/tags">标签</a></li>
+        <li><a href="{{ site.baseurl }}/about"> <span class="badge badge-primary">捐助Me</span></a></li>
+        <li><a href="{{ site.baseurl }}/contact">留言</a></li>       
     </ul>   
 </nav>
 
@@ -59,13 +61,8 @@
 
     <!-- Site Tag
     ================================================== -->
-    {% if page.url == '/' %}
-        <p class="sitetag">
-          <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}"></a>
-	  {{ site.description }}
-        </p>
-    {% endif %}
 
+	{% include category-tag.html %}
     <!-- Content
     ================================================== -->
     <div class="main-content">
@@ -76,7 +73,7 @@
     <!-- Newsletter
     ================================================== -->
     <div class="newsletter text-center">
-        <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, 告诉你车评人的故事</span>
+        <span class="h4"><img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never trust a <b>story</b> from bajie, 永远<b>不要相信</b>一个车评人的鬼话</span>
 
     </div>
     {% endif %}
@@ -92,7 +89,7 @@
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/"> © ConsoleStudio </a>㊀㊁㊂㊃㊄㊅㊆㊇㊈㊉
+                <a target="_blank" href="{{ site.baseurl }}/about"> <span class="badge badge-primary">捐助Me</span></a>
             </div>
         </div>
     </div>
@@ -114,7 +111,7 @@
 {% endif %}
 
 {% if page.layout == 'post' %}
-<script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
+<!--script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script-->
 {% endif %}
 
 </body>
